fix(lightbox.scss): 🐛 adjust next and previous button heights and alignment to avoid overlap with close button

--- a/sass/layout/_lightbox.scss
+++ b/sass/layout/_lightbox.scss
@@ -76,11 +76,15 @@
 .next {
     right: 0;
     margin-left: 3%;
+    height: 50%;
+    align-self: center;
 }
 
 .previous {
     left: 0;
     margin-right: 3%;
+    height: 50%;
+    align-self: center;
 }
 
 .active {
